--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,12 @@ dependencies:
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
+  flutter_launcher_icons: "^0.9.2"
+
+flutter_icons:
+  android: "logo"
+  image_path: "assets/images/logo.png"
+
   flutter_test:
     sdk: flutter
 
@@ -58,5 +64,5 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/images/app-logo1.png
+    - assets/images/logo.png
   
