--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,12 +34,11 @@ dependencies:
   mockito: ^5.0.16
   equatable: ^2.0.3
   provider: ^6.0.1
-  built_value: ^8.1.3
-  built_collection: ^5.1.1
+  json_annotation: ^4.3.0
 
 dev_dependencies:
   build_runner: ^2.1.5
-  built_value_generator: ^8.1.3
+  json_serializable: ^6.0.0
   flutter_launcher_icons: "^0.9.2"
 
 flutter_icons:
