--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.ds_market_place">
+      <uses-permission android:name="android.permission.INTERNET"/>
    <application
         android:label="Nexus Marketplace"
         android:icon="@mipmap/logo">
