--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   equatable: ^2.0.3
   provider: ^6.0.1
   json_annotation: ^4.3.0
+  intl: ^0.17.0
 
 dev_dependencies:
   build_runner: ^2.1.5
