--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   provider: ^6.0.1
   json_annotation: ^4.3.0
   intl: ^0.17.0
+  cached_network_image: ^3.2.0
 
 dev_dependencies:
   build_runner: ^2.1.5
