--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   intl: ^0.17.0
   cached_network_image: ^3.2.0
   ansicolor: ^2.0.1
+  retrofit: ^3.0.1+1
+  dartz: ^0.10.1
+  dio: ^4.0.4
 
 dev_dependencies:
   integration_test:
@@ -48,6 +51,7 @@ dev_dependencies:
   json_serializable: ^6.0.0
   flutter_launcher_icons: "^0.9.2"
   flutter_lints: ^1.0.0
+  retrofit_generator: '>=4.0.0 <5.0.0'
 
 flutter_icons:
   android: "logo"
