--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   dio: ^4.0.4
   pretty_dio_logger: ^1.1.1
   get_it: ^7.2.0
+  rxdart: ^0.27.3
 
 dev_dependencies:
   integration_test:
