--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   pretty_dio_logger: ^1.1.1
   get_it: ^7.2.0
   rxdart: ^0.27.3
+  riverpod: ^1.0.3
+  flutter_riverpod: ^1.0.3
 
 dev_dependencies:
   integration_test:
