--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   riverpod: ^1.0.3
   flutter_riverpod: ^1.0.3
   flutter_screenutil: ^5.3.1
+  animated_text_kit: ^4.2.1
 
 dev_dependencies:
   integration_test:
